--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
-    <script src="script.js"></script>
+    <script src="script.js"defer></script>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+    <div id="game">
     
+        <table>
+            <tr>
+                <th>Player</th>
+                <th>Computer</th>
+            </tr>
+            <tr>
+                <td id="player"></td>
+                <td id="computer"></td>
+            </tr>
+        </table>
+        <div class="container">
+            <button id="rock"value="Rock">Rock</button>
+            <button id="paper" value="Paper">Paper</button>
+            <button id="scissors" value="Scissors">Scissors</button>
+        </div>
+        <button id="restart">Restart</button>
+    </div>
 </body>
 </html>
